--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
           fetch-depth: 0  # gets git history for changelogs
       - name: Package and release
         uses: BigWigsMods/packager@v2
-        with:
-          args: -t HealBot
+        # with:
+         # args: -t HealBot
