--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     # The type of runner that the job will run on
     
     env:
-      GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_OAUTH: ${{ secrets.UPDATE_SECRET }}
     steps:
       - name: Clone project
         uses: actions/checkout@v2
