--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
     
     env:
       GITHUB_OAUTH: ${{ secrets.UPDATE_SECRET }}
+      WOWI_API_TOKEN: "testndksalödfhasiök"
     steps:
       - name: Clone project
         uses: actions/checkout@v2
