--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Package and release
 
 # Controls when the workflow will run
 on:
+  push:
+    tags:
+      - '**'
   # Triggers the workflow on push or pull request events but only for the master branch
  # push:
  #   branches: [ master ]
